--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+<title>Hannah's Rocks</title>
 </head>
 <body>
   <nav class="navbar navbar-default">
@@ -41,7 +43,7 @@
     <div class="thumbnail">
       <!-- 16:9 aspect ratio -->
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/BBgiU_rNDxs" frameborder="0"></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/BBgiU_rNDxs" ></iframe>
       </div>
       <div class="caption">
         <h3>Historic</h3>
