fixed img width for W3C

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </div>
   <div class="col-xs-12 col-md-6">
     <div class="thumbnail">
-      <img src="./einstienrock.jpg" width="1000px" alt="Rock 2">
+      <img src="./einstienrock.jpg" width="1000" alt="Rock 2">
       <div class="caption">
         <h3>Smart Rocks</h3>
         <p>Rocks that are smart?</p>
